# luax-lang

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
examples/: closure.lx  constraints.lx  helloworld.lx  types.lx
src/: ast.cpp  ast.hpp  gc.cpp  gc.hpp  ir.cpp  ir.hpp  lexer.cpp  lexer.hpp  lib.cpp  lib.hpp  parser.cpp  parser.hpp  repl.cpp  repl.hpp  value.cpp  value.hpp
std/: assert  constraints  io  option  panicking  ranges  runtime  typing
std/containers/: array  arraylist
test/: lexer_test.hpp  parser_test.hpp  test_helper.hpp
